@@ -1,4 +1,4 @@
-Twisted 0.99.1rc3
+Twisted 0.99.1rc4
 
 Quote of the Release:
 
@@ -8,7 +8,7 @@ Quote of the Release:
 <glyph> I'm both honored and appalled that Twisted shows up in that
         list :)
 
-For information on what's new in Twisted 0.99.1rc3, see the ChangeLog file
+For information on what's new in Twisted 0.99.1rc4, see the ChangeLog file
 that comes with the distribution, or http://twistedmatrix.com/ChangeLog.txt.
 
 What is this?
