@@ -1,3 +1,8 @@
+2002-08-30  Christopher Armstrong  <radix@twistedmatrix.com>
+
+	* Releasing Twisted 0.99.1rc4. There was a bug in the acquisition 
+	code, as well as a typo in TwistedQuotes.
+
 2002-08-29  Christopher Armstrong  <radix@twistedmatrix.com>
 
         * Releasing Twisted 0.99.1rc3. A bug in the release script
